[gd_scene load_steps=14 format=2]

[ext_resource path="res://World/lojinha.png" type="Texture" id=2]
[ext_resource path="res://NPC/vendor.gd" type="Script" id=3]
[ext_resource path="res://UI/DefaultTheme.tres" type="Theme" id=5]
[ext_resource path="res://tutoriais/bloco texto.png" type="Texture" id=6]
[ext_resource path="res://UI/PixelFonte2.tres" type="DynamicFont" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.20188, 9.13305 )

[sub_resource type="Animation" id=2]
resource_name = "0"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 194, -69.2958 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Give:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 138, -57 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Leave:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 199, -57 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/RichTextLabel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 138, -102 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -76, 98 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "1"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Give:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 138, -57 ), Vector2( 147, 110 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 194, -69.2958 ), Vector2( 199, 98 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Leave:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 199, -57 ), Vector2( 205, 110 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/RichTextLabel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 138, -102 ), Vector2( 147, 69 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -76, 98 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("CanvasLayer/RichTextLabel:bbcode_text")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "[wave amp=10 freq=9]Miau[/wave]
(Hey, do you have some fish? I can trade you one for this key I found.)" ]
}

[sub_resource type="Animation" id=4]
resource_name = "2"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Give:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 147, 110 ), Vector2( 419, 110 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -127, 110 ), Vector2( 147, 110 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/RichTextLabel:bbcode_text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "[wave amp=10 freq=9]Miau[/wave]
(Thanksss chubby human. This is helpful! That key tasted horrible..)" ]
}

[sub_resource type="Animation" id=5]
resource_name = "cat"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=6]
resource_name = "nofish"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "Miau
(Hey, do you have some fish? I can trade you one for this key I found.)", "Miau
(Oh but you don't have a fish... Please find one!)" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Give:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 147, 110 ), Vector2( 387, 76 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 204.04, -97.2878 ), Vector2( 200, -81 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Give:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 419, 110 ), Vector2( 419, 110 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/Leave:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 199.96, -36.1508 ), Vector2( 360.831, -70.75 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/RichTextLabel:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 150.78, -85.9703 ), Vector2( 130, -70 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/2:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 37.3869, -23.5516 ), Vector2( 15.4286, -95.3671 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 200, -65 ), Vector2( 199, 98 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/Leave:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 211, -66 ), Vector2( 205, 110 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/RichTextLabel:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 147, -66 ), Vector2( 147, 69 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/RichTextLabel:bbcode_text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "[wave amp=10 freq=9]Miau[/wave]
(Thanksss chubby human. This is helpful! That key tasted horrible..)" ]
}

[node name="vendor" type="StaticBody2D"]
z_index = 3
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -76 )
texture = ExtResource( 2 )
hframes = 6
frame = 3

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -5, -43 )
scale = Vector2( 7.73959, 3.04 )
shape = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 194, -69.2958 )
scale = Vector2( 1, 1.40845 )
texture = ExtResource( 6 )

[node name="Give" type="Button" parent="CanvasLayer"]
margin_left = 138.0
margin_top = -57.0
margin_right = 192.0
margin_bottom = -37.0
theme = ExtResource( 5 )
custom_fonts/font = ExtResource( 7 )
text = "Give fish"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Leave" type="Button" parent="CanvasLayer"]
margin_left = 199.0
margin_top = -57.0
margin_right = 248.0
margin_bottom = -37.0
theme = ExtResource( 5 )
text = "Bye king"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 138.0
margin_top = -102.0
margin_right = 238.0
margin_bottom = -49.0
custom_fonts/normal_font = ExtResource( 7 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=10 freq=9]Miau[/wave]
(Thanksss chubby human. This is helpful! That key tasted horrible..)"
text = "Miau
(Hey, do you have some fish? I can trade you one for this key I found.)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Button" parent="CanvasLayer"]
margin_left = -76.0
margin_top = 98.0
margin_right = -23.0
margin_bottom = 118.0
theme = ExtResource( 5 )
text = "Yikes. Bye"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "cat"
anims/0 = SubResource( 2 )
anims/1 = SubResource( 3 )
anims/2 = SubResource( 4 )
anims/cat = SubResource( 5 )
anims/nofish = SubResource( 6 )
anims/sumir = SubResource( 7 )
anims/thanks = SubResource( 8 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="pressed" from="CanvasLayer/Give" to="." method="_on_Give_pressed"]
[connection signal="pressed" from="CanvasLayer/Leave" to="." method="_on_Leave_pressed"]
[connection signal="pressed" from="CanvasLayer/2" to="." method="_on_2_pressed"]
